# kiwiLang

./: README.md  ai.md  pStructure.bat
kiwiLang/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  SECURITY.md  config.h  irbc.h  test_main.cpp
kiwiLang/.github/: FUNDING.yml
kiwiLang/.github/workflows/: ci.yml  release.yml
kiwiLang/Unreal/: TD_LISTS.txt  UEConfig.cpp  UEFunctions.cpp  UEFunctions.h  UEIntegration.cpp  UETypes.cpp
kiwiLang/Unreal/Bindings/: UClassBinding.cpp  UFunctionBinding.cpp  UObjectRegistry.cpp  UPropertyBinding.cpp
kiwiLang/Unreal/Integration/: UEEditorIntegration.cpp  UEModuleLoader.cpp  UEProjectBuilder.cpp
kiwiLang/Unreal/Types/: UETypeConverter.cpp
kiwiLang/bench/: CMakeLists.txt  microbenchmarks.cpp
kiwiLang/bench/realworld/: mandelbrot.kiwi  primes.kiwi
kiwiLang/cmake/: CompilerWarnings.cmake  FindLLVM.cmake
kiwiLang/examples/benchmarks/: nbody.kiwi  ray_tracer.kiwi
kiwiLang/examples/game_of_life/: life.kiwi
kiwiLang/examples/game_of_life/patterns/: README.md
kiwiLang/examples/hello_world/: hello.kiwi
kiwiLang/examples/web_server/: middleware.kiwi  router.kiwi  server.kiwi
kiwiLang/include/klang/Unreal/: LICENSE  UEConfig.h  UEIntegration.h  UETypes.h  UnrealEngine.h
kiwiLang/include/klang/Unreal/Bindings/: UClassBinding.h  UFunctionBinding.h  UObjectRegistry.h  UPropertyBinding.h
kiwiLang/include/klang/Unreal/CodeGen/: UECodeGenerator.h  UEHeaderGenerator.h  UENativeStubs.h
kiwiLang/include/klang/Unreal/Integration/: UEEditorIntegration.h  UEModuleLoader.h  UEProjectBuilder.h
kiwiLang/include/klang/Unreal/Runtime/: UEGarbageCollector.h  UEObjectWrapper.h  UERuntime.h
kiwiLang/include/klang/Unreal/Types/: UEBlueprintTypes.h  UETypeConverter.h  UETypeSystem.h
kiwiLang/include/klang/internal/CodeGen/: IRGenerator.h  JITCompiler.h  LLVMBackend.h  Optimizer.h
kiwiLang/include/klang/internal/Lexer/: Lexer.h  Scanner.h  Token.h
kiwiLang/include/klang/internal/Parser/: ASTVisitor.h  Grammar.h  Parser.h
kiwiLang/include/klang/internal/Runtime/: Array.h  GarbageCollector.h  HashTable.h  Memory.h  Object.h  String.h  VM.h
kiwiLang/include/klang/internal/Semantic/: Analyzer.h  SymbolTable.h  TypeChecker.h
kiwiLang/include/klang/internal/Utils/: Diagnostics.h  FileManager.h  SourceLocation.h  StringPool.h
kiwiLang/include/klang/public/: Compiler.h  Config.h  JIT.h  Runtime.h
kiwiLang/integration/: test_compiler.cpp  test_stdlib.cpp
kiwiLang/lib/compile-time-regular-expressions-3.10.0/docs/: api.rst  conf.py  examples.rst  index.rst  regex_syntax.rst
kiwiLang/lib/fmt-12.1.0/test/: CMakeLists.txt
kiwiLang/src/: Driver.cpp  main.cpp  uengine.hpp
kiwiLang/tests/unit/CodeGen/: test_irgen.cpp
kiwiLang/tests/unit/Lexer/: test_lexer.cpp  test_scanner.cpp
kiwiLang/tests/unit/Parser/: test_parser.cpp
kiwiLang/tests/unit/Runtime/: test_vm.cpp
kiwiLang/tests/unit/Semantic/: test_typechecker.cpp
tools/: klang-format.cpp  klang-lint.cpp
tools/scripts/: benchmark.py  generate_parser.py  update_docs.py
